--- a/erpAgroflori/registration/templates/registration.html
+++ b/erpAgroflori/registration/templates/registration.html
@@ -10,6 +10,6 @@
             {{ form.errors }}
         </div>
         {% endif %}
-        <button type="submit" class="btn btn-success">Register</button>
+        <button type="submit" class="btn btn-success">Guardar</button>
     </form>
 {% endblock %}
