--- a/erpAgroflori/transactions/templates/base.html
+++ b/erpAgroflori/transactions/templates/base.html
@@ -6,34 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <style>
-        .sidenav {
-            height: 100%;
-            width: 20%;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: #111;
-            overflow-x: hidden;
-            padding-top: 20px;
+        
+        .custom-bg {
+            background-color: green;
         }
-
-        .sidenav a {
+        
+        .nav a {
             padding: 6px 8px 6px 16px;
             text-decoration: none;
             font: #818181;
             display: block;
             font-size: 25px;
-            color: rgb(134, 134, 212);
+            color: rgb(255, 255, 255);
         }
 
-        .sidenav a:hover {
-            color: #f1f1f1;
+        .nav a:hover {
+            color: rgb(46, 213, 20);
         }
 
         .main {
             margin-left: 20%;
-            padding: 0px 10px;
+            padding: 10px 10px;
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -43,25 +36,76 @@
 
 
 <body>
-    <div class="sidenav">
-     <a href="/">Home</a>
-     <a href="/create">Create</a>
-     <a href="/view">View</a>
-    </div>
 
-    <div id="content" name="content" class="main" >
-        <div  class="row justify-content-center"> 
-            <div class="col-8">
-                <h1 class="mt-2">My site</h1>
-                <hr class = " mt-0 mb-4">
-                    {% block content %}
-                        {% csrf_token %}
-                        {{ form|crispy }}
-                        <button type="submit" class="btn btn-success">Register</button>
-                    {% endblock %}
+    <div class="container-fluid">
+        <div class="row flex-nowrap">
+            <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 custom-bg">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                    <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <span class="fs-5 d-none d-sm-inline">AGROFLORI</span>
+                    </a>
+                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                        <li>
+                            <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Finanzas</span> </a>
+                            <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+                                <li class="w-100">
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Entradas</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Tienda</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Donaciones</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Otras Transacciones</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Añandir Item</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Gráficas</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                            <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+                                <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Personas</span></a>
+                            <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
+                                <li class="w-100">
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Buscar</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Reportes</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Mi Perfil</span> </a>
+                        </li>
+                        <hr>
+                        <li>
+                            <a href= "{% url 'log-out' %}" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sign Out</span> </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="content" name="content" class="col py-3" >
+                <div  class="row justify-content-center"> 
+                    <div class="col-8">
+                        <hr class = " mt-0 mb-4">
+                            {% block content %}
+                            <h1>Welcome {{user}}</h1>
+                            {% endblock %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
