--- a/erpAgroflori/transactions/templates/base.html
+++ b/erpAgroflori/transactions/templates/base.html
@@ -8,7 +8,7 @@
     <style>
         
         .custom-bg {
-            background-color: green;
+            background-color: black;
         }
         
         .nav a {
@@ -16,21 +16,33 @@
             text-decoration: none;
             font: #818181;
             display: block;
-            font-size: 25px;
+            font-size: 1rem;
             color: rgb(255, 255, 255);
         }
 
+        .nav a:active {
+            color: inherit;
+        }
         .nav a:hover {
             color: rgb(46, 213, 20);
         }
-
+        
+        li li {
+            text-indent: 1rem;
+        }
         .main {
             margin-left: 20%;
             padding: 10px 10px;
         }
+
+        .bottom-bar {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
 
@@ -41,13 +53,13 @@
         <div class="row flex-nowrap">
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 custom-bg">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                    <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                        <span class="fs-5 d-none d-sm-inline">AGROFLORI</span>
+                    <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="#">
+                        <span class="fs-5 d-none d-sm-inline navbar-brand">AGROFLORI</span>
                     </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                         <li>
                             <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Finanzas</span> </a>
+                                <i class="fs-4 bi bi-cash"></i> <span class="ms-1 d-none d-sm-inline">Finanzas</span> </a>
                             <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                                 <li class="w-100">
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Entradas</span></a>
@@ -69,8 +81,9 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
                             <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                                <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Personas</span></a>
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Personas</span></a>
                             <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
                                 <li class="w-100">
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Buscar</span></a>
@@ -82,12 +95,12 @@
                         </li>
                         <li>
                             <a href="#" class="nav-link px-0 align-middle">
-                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Mi Perfil</span> </a>
+                                <i class="fs-4 bi-person"></i> <span class="ms-1 d-none d-sm-inline">Mi Perfil</span> </a>
                         </li>
                         <hr>
                         <li>
                             <a href= "{% url 'log-out' %}" class="nav-link px-0 align-middle">
-                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Sign Out</span> </a>
+                                <i class="fs-4 bi bi-box-arrow-left"></i> <span class="ms-1 d-none d-sm-inline">Sign Out</span> </a>
                         </li>
                     </ul>
                 </div>
@@ -95,10 +108,14 @@
             <div id="content" name="content" class="col py-3" >
                 <div  class="row justify-content-center"> 
                     <div class="col-8">
-                        <hr class = " mt-0 mb-4">
-                            {% block content %}
-                            <h1>Welcome {{user}}</h1>
-                            {% endblock %}
+                        {% block content %}
+                        <div class="bottom-bar">
+                            <p>{{user}}</p>
+                            <i class="bi bi-person"></i>
+                            
+                        </div> 
+                        <hr class = " mt-4 mb-4">
+                        {% endblock %}
                     </div>
                 </div>
             </div>
