dev-002 Created transactions/ursl.py, transactions/forms.py. Added a reference to transactions/urls.py in ERPAgroflori/urls.py. Created basic layout for transaction.html and basic database saving logic.

--- a/erpAgroflori/transactions/templates/base.html
+++ b/erpAgroflori/transactions/templates/base.html
@@ -40,6 +40,13 @@
             flex-direction: row;
             justify-content: flex-end;
         }
+
+        .transaction_form {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 16px;
+        }
+
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -71,7 +78,7 @@
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Donaciones</span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Otras Transacciones</span></a>
+                                    <a href="{% url 'make-transaction' %}" class="nav-link px-0"> <span class="d-none d-sm-inline">Otras Transacciones</span></a>
                                 </li>
                                 <li>
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Añandir Item</span></a>
