--- a/erpAgroflori/transactions/templates/base.html
+++ b/erpAgroflori/transactions/templates/base.html
@@ -60,7 +60,7 @@
         <div class="row flex-nowrap">
             <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 custom-bg">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                    <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="#">
+                    <a class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none" href="{% url 'home' %}" >
                         <span class="fs-5 d-none d-sm-inline navbar-brand">AGROFLORI</span>
                     </a>
                     <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
@@ -115,13 +115,12 @@
             <div id="content" name="content" class="col py-3" >
                 <div  class="row justify-content-center"> 
                     <div class="col-8">
-                        {% block content %}
                         <div class="bottom-bar">
                             <p>{{user}}</p>
                             <i class="bi bi-person"></i>
-                            
                         </div> 
                         <hr class = " mt-4 mb-4">
+                        {% block content %}
                         {% endblock %}
                     </div>
                 </div>
