dev-002 Added a ticket sale view that has a ticket sale form and a ticket_sale_detail formset. The saving logib of the form is undone.

--- a/erpAgroflori/transactions/templates/base.html
+++ b/erpAgroflori/transactions/templates/base.html
@@ -69,7 +69,7 @@
                                 <i class="fs-4 bi bi-cash"></i> <span class="ms-1 d-none d-sm-inline">Finanzas</span> </a>
                             <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                                 <li class="w-100">
-                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Entradas</span></a>
+                                    <a href="{% url 'register-ticket-sale' %}" class="nav-link px-0"> <span class="d-none d-sm-inline">Entradas</span></a>
                                 </li>
                                 <li>
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Tienda</span></a>
