--- a/erpAgroflori/transactions/templates/ticket.html
+++ b/erpAgroflori/transactions/templates/ticket.html
@@ -6,16 +6,35 @@
     <h1>REGISTRAR VENTA DE ENTRADAS</h1>
     <form method="POST" class="form-group">
         {% csrf_token %}
-        {% crispy sale_form%}
-        <form method="post">
-            {{ formset.management_form }}
+        {{ sale_form | crispy }}
+        {% if sale_form.errors %}
+            <div class="alert alert-danger">
+                {{ sale_form.errors }}
+            </div>
+        {% endif %}
+
+        {{ formset.management_form }}
+        {% for form in formset %}
+            {{ form }}
+            <label>Monto:<input id="{{ form.prefix }}-amount" type="text" class="amount-input-class" value='0' readonly></label>
+            <hr>
+        {% endfor %}
+
+        {% if formset.errors %}
             {% for form in formset %}
-                {{ form }}
-                <label>Monto:<input id="{{ form.prefix }}-amount" type="text" value='0' readonly></label>
-                <hr>
-            {% endfor %}
-        </form>
+                <div class="alert alert-danger">
+                {{ form.errors }}
+                </div>
+                {% endfor %}
+        {% endif %}
         
+        {% for error in formset.non_form_errors %}
+            <p>f</p>
+            <span style="color: red">{{ error }}</span>
+        {% endfor %}
+        <button type="submit" class="btn btn-success">Guardar</button>
     </form>
+        
+    
     <script src="{% static 'tickets.js' %}"></script>
 {% endblock %}
