dev-004 Added souvenir sale registration.

--- a/erpAgroflori/transactions/templates/base.html
+++ b/erpAgroflori/transactions/templates/base.html
@@ -72,7 +72,10 @@
                                     <a href="{% url 'register-ticket-sale' %}" class="nav-link px-0"> <span class="d-none d-sm-inline">Entradas</span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Tienda</span></a>
+                                    <a href="{% url 'register-souvenir-sale' %}" class="nav-link px-0"> <span class="d-none d-sm-inline">Tienda Souvenirs</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Tienda Comida</span></a>
                                 </li>
                                 <li>
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Donaciones</span></a>
@@ -81,7 +84,7 @@
                                     <a href="{% url 'make-transaction' %}" class="nav-link px-0"> <span class="d-none d-sm-inline">Otras Transacciones</span></a>
                                 </li>
                                 <li>
-                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Añandir Item</span></a>
+                                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Añadir Item</span></a>
                                 </li>
                                 <li>
                                     <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Gráficas</span></a>
