dev-005 Added an add user hyperlink in login page.

--- a/erpAgroflori/transactions/templates/transaction_update_form.html
+++ b/erpAgroflori/transactions/templates/transaction_update_form.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 {% block title %}Transaction Update{% endblock %}
 {% block content %}
-
+<h1>EDITAR TRANSACCIÓN</h1>
 <form method="post">{% csrf_token %}
     {{ form | crispy }}
     <div class="py-3">
