--- a/erpAgroflori/registration/templates/login.html
+++ b/erpAgroflori/registration/templates/login.html
@@ -18,4 +18,5 @@
 
         <button type="submit" class="btn btn-success">Ingresar</button>
     </form>
+    <a href="{% url 'registration'%}">Crea una cuenta</a>
 {% endblock %}
