--- a/erpAgroflori/registration/templates/login.html
+++ b/erpAgroflori/registration/templates/login.html
@@ -1,4 +1,5 @@
 {%extends 'base_registration.html'%}
+{% load socialaccount %}
 {% load crispy_forms_tags %}
 {% block title %}Log-In{% endblock %}
 {% block content %}
@@ -18,5 +19,6 @@
 
         <button type="submit" class="btn btn-success">Ingresar</button>
     </form>
+    <a href="{% provider_login_url 'google' process='login'%}">Ingresa con Google</a>
     <a href="{% url 'registration'%}">Crea una cuenta</a>
 {% endblock %}
